Added dialog backdrop feature

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div data-cell="9" id="9"></div>
         </div>
     </main>
-    <dialog open>
+    <dialog>
         <form action="" method="dialog">
             <h2>Welcome to Tic Tac Toe!</h2>
             <div class="form-player">
