--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="interface">
             <div class="player-int">Player: X</div>
             <button class="restart-btn">↺ Restart</button>
+            <button class="reset-btn">Reset</button>
         </div>
     </header>
     <main>
