--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Tic Tac Toe!</h1>
+        <h1 class="title">Tic Tac Toe!</h1>
         <div class="interface">
             <div class="player-int">Player: X</div>
             <button class="restart-btn">↺ Restart</button>
@@ -73,6 +73,7 @@
             <input type="submit" id="form-submit" value="Start">
         </form>
     </dialog>
+
 
     <script src="script.js"></script>
 </body>
