Added WIP for Unbeatable Option

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <input type="radio" name="difficulty" id="easy" value="easy" required>
                 </div>
                 <div>
-                    <label for="unbeatable">Unbeatable</label>
+                    <label for="unbeatable">Unbeatable(WIP)</label>
                     <input type="radio" name="difficulty" id="unbeatable" value="unbeatable" required>
                 </div>
             </div>
